--- a/src/Interface/MainFrame.form
+++ b/src/Interface/MainFrame.form
@@ -284,7 +284,7 @@
                                   <Group type="102" alignment="0" attributes="0">
                                       <Component id="jTextFieldBaseUser" min="-2" pref="88" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="jTextFieldBasePass" min="-2" pref="88" max="-2" attributes="0"/>
+                                      <Component id="jTextFieldBasePass" pref="250" max="32767" attributes="0"/>
                                   </Group>
                                   <Component id="jTextFieldBaseSource" alignment="0" pref="344" max="32767" attributes="1"/>
                               </Group>
