--- a/src/Interface/MainFrame.form
+++ b/src/Interface/MainFrame.form
@@ -105,16 +105,18 @@
                   <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jButtonRunAll" alignment="0" min="-2" max="-2" attributes="1"/>
-                          <Group type="102" attributes="0">
-                              <Component id="jButtonRunInfile" pref="119" max="32767" attributes="1"/>
-                              <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
-                          </Group>
                           <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="1" attributes="0">
-                                  <Component id="jButtonRunOutfile" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="jButtonRunUpload" alignment="0" pref="119" max="32767" attributes="0"/>
-                                  <Component id="jButtonRunDownload" alignment="1" pref="119" max="32767" attributes="1"/>
+                                  <Component id="jButtonRunOutfile" alignment="0" pref="122" max="32767" attributes="0"/>
+                                  <Component id="jButtonRunUpload" alignment="0" pref="122" max="32767" attributes="0"/>
+                                  <Component id="jButtonRunDownload" alignment="1" pref="122" max="32767" attributes="1"/>
+                              </Group>
+                              <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="1" attributes="0">
+                              <Group type="103" groupAlignment="1" attributes="0">
+                                  <Component id="jButtonRunAll" alignment="0" pref="122" max="32767" attributes="1"/>
+                                  <Component id="jButtonRunInfile" alignment="1" pref="122" max="32767" attributes="1"/>
                               </Group>
                               <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
                           </Group>
@@ -232,25 +234,20 @@
                                       </Group>
                                       <Group type="102" alignment="0" attributes="0">
                                           <Group type="103" groupAlignment="0" attributes="0">
+                                              <Component id="jLabelBaseUserAndPass" alignment="0" min="-2" max="-2" attributes="0"/>
                                               <Component id="jLabelPlatformSource" alignment="0" min="-2" max="-2" attributes="0"/>
                                               <Component id="jLabelBaseSource" alignment="0" min="-2" max="-2" attributes="0"/>
                                           </Group>
-                                          <EmptySpace min="-2" pref="55" max="-2" attributes="0"/>
-                                          <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                                              <Component id="jTextFieldPlatformSource" max="32767" attributes="1"/>
-                                              <Component id="jTextFieldBaseSource" alignment="1" pref="230" max="32767" attributes="1"/>
-                                          </Group>
-                                      </Group>
-                                      <Group type="102" alignment="0" attributes="0">
-                                          <Component id="jLabelBaseUserAndPass" min="-2" max="-2" attributes="0"/>
                                           <EmptySpace max="-2" attributes="0"/>
                                           <Group type="103" groupAlignment="0" attributes="0">
+                                              <Component id="jTextFieldBaseSource" alignment="1" pref="232" max="32767" attributes="1"/>
                                               <Component id="jTextFieldFTPSource" alignment="0" pref="230" max="32767" attributes="0"/>
                                               <Group type="102" alignment="0" attributes="0">
                                                   <Component id="jTextFieldBaseUser" min="-2" pref="113" max="-2" attributes="0"/>
                                                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                                   <Component id="jTextFieldBasePass" pref="107" max="32767" attributes="0"/>
                                               </Group>
+                                              <Component id="jTextFieldPlatformSource" alignment="1" pref="232" max="32767" attributes="1"/>
                                           </Group>
                                       </Group>
                                   </Group>
@@ -262,7 +259,7 @@
                               </Group>
                           </Group>
                       </Group>
-                      <EmptySpace pref="78" max="32767" attributes="0"/>
+                      <EmptySpace pref="45" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -278,8 +275,8 @@
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabelBaseSource" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jTextFieldBaseSource" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jButtonSelBaseSource" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jTextFieldBaseSource" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
@@ -303,7 +300,7 @@
                           <Component id="jButtonApply" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jButtonCancel" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="33" max="32767" attributes="0"/>
+                      <EmptySpace pref="27" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
