--- a/src/Interface/MainFrame.form
+++ b/src/Interface/MainFrame.form
@@ -105,23 +105,13 @@
                   <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" attributes="0">
-                              <Group type="103" groupAlignment="1" attributes="0">
-                                  <Component id="jButtonRunOutfile" alignment="0" pref="122" max="32767" attributes="0"/>
-                                  <Component id="jButtonRunUpload" alignment="0" pref="122" max="32767" attributes="0"/>
-                                  <Component id="jButtonRunDownload" alignment="1" pref="122" max="32767" attributes="1"/>
-                              </Group>
-                              <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="1" attributes="0">
-                              <Group type="103" groupAlignment="1" attributes="0">
-                                  <Component id="jButtonRunAll" alignment="0" pref="122" max="32767" attributes="1"/>
-                                  <Component id="jButtonRunInfile" alignment="1" pref="122" max="32767" attributes="1"/>
-                              </Group>
-                              <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
-                          </Group>
+                          <Component id="jButtonRunOutfile" alignment="0" pref="121" max="32767" attributes="0"/>
+                          <Component id="jButtonRunUpload" alignment="0" pref="121" max="32767" attributes="0"/>
+                          <Component id="jButtonRunDownload" alignment="1" pref="121" max="32767" attributes="1"/>
+                          <Component id="jButtonRunAll" alignment="0" max="32767" attributes="1"/>
+                          <Component id="jButtonRunInfile" alignment="1" pref="121" max="32767" attributes="1"/>
                       </Group>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
                       <Component id="jScrollPane2" min="-2" pref="329" max="-2" attributes="1"/>
                       <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
                   </Group>
@@ -259,7 +249,7 @@
                               </Group>
                           </Group>
                       </Group>
-                      <EmptySpace pref="45" max="32767" attributes="0"/>
+                      <EmptySpace pref="76" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -300,7 +290,7 @@
                           <Component id="jButtonApply" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jButtonCancel" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="27" max="32767" attributes="0"/>
+                      <EmptySpace pref="33" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
