--- a/src/Interface/MainFrame.form
+++ b/src/Interface/MainFrame.form
@@ -214,14 +214,7 @@
                                   <Component id="jButtonCancel" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
-                                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                                      <Group type="102" alignment="0" attributes="1">
-                                          <Component id="jLabelFTPUserAndPass" min="-2" max="-2" attributes="0"/>
-                                          <EmptySpace max="-2" attributes="0"/>
-                                          <Component id="jTextFieldFTPUser" min="-2" pref="113" max="-2" attributes="0"/>
-                                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                          <Component id="jTextFieldFTPPass" max="32767" attributes="0"/>
-                                      </Group>
+                                  <Group type="103" groupAlignment="1" attributes="0">
                                       <Group type="102" alignment="0" attributes="0">
                                           <Group type="103" groupAlignment="0" attributes="0">
                                               <Component id="jLabelBaseUserAndPass" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -235,10 +228,17 @@
                                               <Group type="102" alignment="0" attributes="0">
                                                   <Component id="jTextFieldBaseUser" min="-2" pref="113" max="-2" attributes="0"/>
                                                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                                  <Component id="jTextFieldBasePass" pref="107" max="32767" attributes="0"/>
+                                                  <Component id="jTextFieldBasePass" pref="109" max="32767" attributes="0"/>
                                               </Group>
                                               <Component id="jTextFieldPlatformSource" alignment="1" pref="232" max="32767" attributes="1"/>
                                           </Group>
+                                      </Group>
+                                      <Group type="102" alignment="0" attributes="0">
+                                          <Component id="jLabelFTPUserAndPass" min="-2" max="-2" attributes="0"/>
+                                          <EmptySpace max="-2" attributes="0"/>
+                                          <Component id="jTextFieldFTPUser" min="-2" pref="113" max="-2" attributes="0"/>
+                                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                          <Component id="jTextFieldFTPPass" pref="109" max="32767" attributes="0"/>
                                       </Group>
                                   </Group>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -246,10 +246,11 @@
                                       <Component id="jButtonSelBaseSource" min="0" pref="0" max="32767" attributes="1"/>
                                       <Component id="jButtonSelPlatformSource" alignment="0" pref="31" max="32767" attributes="1"/>
                                   </Group>
+                                  <EmptySpace min="-2" pref="65" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
-                      <EmptySpace pref="76" max="32767" attributes="0"/>
+                      <EmptySpace pref="11" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -314,8 +315,6 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonApplyActionPerformed"/>
               </Events>
             </Component>
-            <Component class="javax.swing.JTextField" name="jTextFieldFTPPass">
-            </Component>
             <Component class="javax.swing.JTextField" name="jTextFieldFTPUser">
             </Component>
             <Component class="javax.swing.JLabel" name="jLabelFTPUserAndPass">
@@ -329,8 +328,6 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="&#x41f;&#x443;&#x442;&#x44c; &#x434;&#x43e; ftp"/>
               </Properties>
-            </Component>
-            <Component class="javax.swing.JTextField" name="jTextFieldBasePass">
             </Component>
             <Component class="javax.swing.JTextField" name="jTextFieldBaseUser">
             </Component>
@@ -359,6 +356,16 @@
             <Component class="javax.swing.JButton" name="jButtonSelBaseSource">
               <Properties>
                 <Property name="text" type="java.lang.String" value="..."/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JPasswordField" name="jTextFieldBasePass">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="jPasswordField1"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JPasswordField" name="jTextFieldFTPPass">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="jPasswordField1"/>
               </Properties>
             </Component>
           </SubComponents>
