--- a/src/Interface/MainFrame.form
+++ b/src/Interface/MainFrame.form
@@ -352,6 +352,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="..."/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonSelPlatformSourceActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="jButtonSelBaseSource">
               <Properties>
